2006-06-25  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/AncestorChart2.py: fix comment
	* src/plugins/DecendChart.py: fix comment
	* src/plugins/TimeLine.py: Remove Title option

2006-06-24  Alex Roitman  <shura@gramps-project.org>
	* debian/control (Build-Depends-Indep): Add xsltproc

2006-06-25  Brian Matherly  <brian@gramps-project.org>
	* src/docgen/ODFDoc.py: Handle exception when file is not writeable
	* src/docgen/ODSDoc.py: Handle exception when file is not writeable
	* src/docgen/OpenOfficeDoc.py: Handle exception when file is not writeable
	* src/docgen/OpenSpreadSheet.py: Handle exception when file is not writeable
	* src/plugins/AncestorChart2.py: Remove Title option
	* src/plugins/DecendChart.py: Remove Title option

2006-06-23  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_WriteGedcom.py: Prevent writing empty value tags.
	* src/images/Makefile.am (dist_pkgdata_DATA): Comment out map images.
	* configure.in: Add help/Makefile to AC_CONFIG_FILES.
	* Makefile.am (SUBDIRS): Add help subdir.
	* debian: Add directory for debian packaging.

2006-06-23  Don Allingham  <don@gramps-project.org>
	* help/C/gramps-manual.xml: updates
	* help/C/figures/*.png: updates
	* src/GrampsDb/_ReadXML.py: fix syntax error with old ref formats

2006-06-22  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_GrampsDbBase.py: remove unused variable
	* src/Editors/_EditPlace.py: Allow duplicate names
	* src/Editors/_EditFamily.py: improve error message

2006-06-21  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadXML.py: handle witness ref properly

2006-06-22  Alex Roitman  <shura@gramps-project.org>
	* src/Filters/Rules/Person/_RelationshipPathBetweenBookmarks.py:
	Add new module.
	* src/Filters/Rules/Person/Makefile.am (pkgdata_PYTHON): Ship new
	module.
	* src/Filters/Rules/Person/__init__.py: Import new module.
	* src/GrampsDb/_WriteGedcom.py (GedcomWriter.__init__): Typo.

2006-06-21  Don Allingham  <don@gramps-project.org>